<resources>
    <string name="app_name">My Assistant</string>
    <string name="type_a_message">Type a message...</string>
    <string name="content_description">description</string>

    <string name="chat_bot_name">My Assistant</string>
    <string name="active_status_connected">Always active</string>
    <string name="active_status_disconnected">Disconnected</string>

    <string name="send_message_error">Server is disconnected. Try again.</string>
    <string name="warning_server_is_disconnected">Server is disconnected</string>

    <string name="setting_dashboard">Dashboard</string>

    <string name="setting_menu">Settings</string>
    <string name="setting_edit_profile">Edit Profile</string>
    <string name="setting_night_mode">Night mode</string>

    <string name="menu_light">Light</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_fan">Fan</string>
    <string name="menu_pump">Pump</string>
    <string name="menu_media">Media</string>

    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>

    <string name="time_sample">8:00 AM</string>
    <string name="number_0">0</string>
    <string name="lamp">Lamp</string>
    <string name="sample_username">Viet Kynl</string>
    <string name="sample_email">vietkynl@gmail.com</string>
    <string name="settings_weather_forecast">Weather forecast</string>
    <string name="settings_auto_connect">Auto Connect</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_text_size">Text Size</string>
    <string name="settings_privacy">Privacy</string>
</resources>