<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="2dp"
        android:text="@string/time_sample"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/layoutAssistantAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="1dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description"
                    app:srcCompat="@drawable/chatbot_avatar" />

            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/layoutMessageContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <LinearLayout
                android:id="@+id/layoutPartnerMessagePosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:background="@drawable/message_background"
                android:backgroundTint="@color/selector_partner_message_background_tint"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPartnerMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMyMessagePosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutMyMessageShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/message_background"
                    android:backgroundTint="@color/selector_my_message_background_tint">

                    <TextView
                        android:id="@+id/textViewMyMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutMyMessageError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/error" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/send_message_error"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
