<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_assistant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_rectangle_20"
    android:elevation="4dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/nav_bubble_chat"
        android:elevation="4dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:id="@+id/navBarNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageButton
                android:id="@+id/backToMainUIButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/back_b_50" />

            <androidx.cardview.widget.CardView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="1dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/content_description"
                    app:srcCompat="@drawable/chatbot_avatar" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_bot_name"
                    android:textColor="@color/text_dark_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="22dp">

                    <View
                        android:id="@+id/indicatorLightStatus"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="2dp"
                        android:background="@drawable/ellipse_12_shape_red" />

                    <TextView
                        android:id="@+id/activeStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/active_status_disconnected"
                        android:textColor="@color/always_active_ek1_color"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ellipsis_b_50" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/navBarAdvance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/navBarAdvanceCloseButton"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/close_b_50" />

            <TextView
                android:id="@+id/selectedItemCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/number_0"
                android:textColor="@color/text_dark_color"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/copyButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/copy_b_24" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/delete_b_24" />

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ellipsis_b_50" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/messageArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:scrollbars="vertical"
            tools:listitem="@layout/message_recycler_view_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/suggestionArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggestionRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:itemCount="5"
            tools:listitem="@layout/suggestion_recycler_view_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/rounded_rectangle"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">


            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="message"
                android:background="@drawable/transparent_rectangle"
                android:ems="10"
                android:fontFamily="DM Sans"
                android:gravity="start|top"
                android:hint="@string/type_a_message"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/transparent_rectangle"
                android:contentDescription="@string/content_description"
                android:padding="5dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/messageEditText"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/micro" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/sendMessageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:background="@drawable/oval_shape"
            android:contentDescription="@string/content_description"
            app:srcCompat="@drawable/send_button" />


    </LinearLayout>

</LinearLayout>